Fixed letter spacing in third line

--- a/public/css/_common.scss
+++ b/public/css/_common.scss
@@ -184,7 +184,7 @@ html,body {
     color:#1e1e1e;
     margin: -15px 0;
     font-size: 15px;
-    letter-spacing: 3.9px;
+    letter-spacing: 3.5px;
   }
 }
 
