--- a/public/css/main.css
+++ b/public/css/main.css
@@ -845,7 +845,7 @@ html, body {
     color: #1e1e1e;
     margin: -15px 0;
     font-size: 15px;
-    letter-spacing: 3.9px; }
+    letter-spacing: 3.5px; }
 
 #bot-h5 {
   color: #eaeaea;
